# automated-euclidean-approximation-system

./: .gitignore  AGENTS.md  PLAN.md  README.md  aeas-env.yml  all_summaries_with_run.csv  audit.md  conftest.py  pyproject.toml  runs.md
beam_collapse_results/: BEAM_COLLAPSE_NOTES.md
beam_collapse_results/beam_sweep_n13_d4_nodes30_beam2000/: search_n13.jsonl  summary.csv
beam_collapse_results/beam_sweep_n13_d4_nodes30_beam5000/: summary.csv
beam_collapse_results/depth_sweep_d2_nodes25_beam5000/: run_config.json
beam_collapse_results/depth_sweep_d3_nodes25_beam5000/: search_n11.jsonl
beam_collapse_results/depth_sweep_d4_nodes25_beam5000/: run_config.json  search_n7.jsonl  summary.csv
beam_collapse_results/depth_sweep_d5_nodes25_beam5000/: run_config.json  search_n13.jsonl
beam_collapse_results/node_sweep_d4_nodes15_beam5000/: search_n11.jsonl  (+1 more)
benchmark/: MANIFEST.json  README.md
report/: AUDIT.md  CODEX_MASTER_PROMPT.md  EXPERIMENTS.md  OVERVIEW.md  PATCHLIST.md  PLAN.md  RESULTS_PICKUP.md  RESUME_PROMPT.md  ROADMAP.md  STATUS.md  aeas_paper.tex  benchmark_spec.md
scripts/: analyse_scaling.py  auto_deep_sweep.py  compare_methods.py  generate_benchmark.py  plot_results.py  rerun_all.sh  run_benchmark.py  run_search.py  score_benchmark.py  visualize_search.py
tests/: test_ast_io.py  test_canb_adapter.py  test_canonicalize.py  test_cf_baseline.py  test_chebyshev.py  test_compare_methods.py  test_evaluate.py  test_expr.py  test_field_search.py  test_generator_deterministic.py  test_pslq_baseline.py  test_runner_smoke.py  test_schemas.py  test_scorer.py
(+995 files in other folders)
